feat: Added maximum stake (exclusive) option for delegation roles
