# vibrantnet/core/src/types/roles/delegatorRole.ts
@@ -3,5 +3,6 @@ import { WithRoleId } from './withRoleId';
 export type DelegatorRole = {
   id: number
   poolHash?: string
-  minimumStake: number
+  minimumStake: number,
+  maximumStake?: number,
 } & WithRoleId;
